# DurakAi

./: .gitattributes  .gitignore  BENCHMARK.md  CHANGELOG_AI.md  README.md  README_TRAINING.md  SUMMARY.md  UPGRADE_NOTES.md  durakk_env.pyd  package.json  sanity_test.py
.zcode/plans/: plan-sess_b6297a77-10c2-4cfd-92b8-ed2cbd9a344b.md  plan-sess_fc224ae7-906b-48e4-8979-5d3176143840.md
docs/: STRICT_ARENA.md  rules.md
electron/: engine-bridge.js  main.js  preload.js
engine/: CMakeLists.txt
engine/src/: bindings.cpp  bindings_fixed.txt  bitboard.cpp  bitboard.h  bot.cpp  bot.h  card.cpp  card.h  deck.cpp  deck.h  endgame.cpp  endgame.h  endgame_db.cpp  endgame_db.h  game_state.cpp  game_state.h  gpu_engine.cpp  gpu_engine.h  gpu_kernels.cu  gpu_launchers.cu  ismcts.cpp  ismcts.h  ismcts_fixed.txt  knowledge.h  main.cpp  match.cpp  match.h  mcts.cpp  mcts.h  move.h  move_ordering.h  protocol.cpp  protocol.h  rules.cpp  rules.h  rules_fast.cpp  rules_fast.h  threadpool.h  ttable.cpp  ttable.h
engine/src/nnet/: onnx_net.cpp  policy_value_net.h  random_net.cpp
scripts/: build-engine.js  run_training.bat  run_training.sh
src/: index.html  renderer.js  styles.css
training/: arena.py  arena_math.py  build_endgame_db.py  durakk_env.pyd  export_onnx.py  model.py  model_resnet.py  model_transformer.py  replay_buffer.py  requirements.txt  rules_validator.py  sanity_test.py  self_play.py  strict_arena.py  test_strict_arena.py  train.py  vector_env.py
